# ultra-metis

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml  plugin.json  release-please-config.json  rustfmt.toml
apps/control-api/: Cargo.toml  start.sh
apps/control-api/src/: auth.rs  db.rs  lib.rs  main.rs  models.rs  planning.rs  routes.rs
apps/control-api/tests/: history_integration.rs  integration.rs  notification_integration.rs  planning_integration.rs
apps/machine-runner/: Cargo.toml  config.example.toml  start.sh
apps/machine-runner/src/: client.rs  config.rs  discovery.rs  handle.rs  injection.rs  keychain.rs  lib.rs  local_enforcement.rs  log_forwarder.rs  main.rs  output_capture.rs  policy.rs  runner.rs  settings.rs  state_reporter.rs  supervisor.rs
apps/runner-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/runner-desktop/src-tauri/capabilities/: default.json
apps/runner-desktop/src-tauri/src/: commands.rs  main.rs  tray.rs
benchmarks/practical/: Cargo.toml  README.md
benchmarks/practical/results/: comparison_20260317T224156Z.md  comparison_20260317T224532Z.md  comparison_20260318T191023Z.md  latest_mcp_suite.json  latest_run.json  latest_run_autonomous.md  mcp_comparison_20260318T180031Z.json  mcp_comparison_20260318T180031Z.md  mcp_comparison_20260318T180813Z.json  mcp_comparison_20260318T180813Z.md  mcp_planning_comparison_20260318T182537Z.json  mcp_planning_comparison_20260318T182537Z.md  mcp_planning_comparison_20260318T183308Z.json  mcp_planning_comparison_20260318T183308Z.md  mcp_planning_comparison_20260318T183356Z.json  mcp_planning_comparison_20260318T183356Z.md  mcp_planning_comparison_20260318T183705Z.json  mcp_planning_comparison_20260318T183705Z.md  mcp_suite_20260318T181759Z.json  mcp_suite_20260318T181759Z.md  mcp_suite_20260318T182415Z.json  mcp_suite_20260318T182415Z.md  mcp_suite_20260318T184422Z.json  mcp_suite_20260318T184422Z.md  results_history.csv  run_20260317T223855Z.json  run_20260317T224022Z.json  run_20260317T224055Z.json  run_20260317T224156Z.json  run_20260317T224416Z.json  run_20260317T224532Z.json  run_20260318T190038Z.json  run_20260318T190038Z_autonomous.md  run_20260318T190943Z.json  run_20260318T190943Z_autonomous.md  run_20260318T191023Z.json  run_20260318T191023Z_validated.md  sample_comparison.json  tool_comparison_20260318T013215Z.json  tool_comparison_20260318T013215Z.md  (+2 more)
benchmarks/practical/scenario/: parse-initiative.md  scenario.json  spec.md  transform-initiative.md  vision.md
benchmarks/practical/scenarios/data-pipeline/: enrichment-initiative.md  ingestion-initiative.md  scenario.json  spec.md  vision.md
benchmarks/practical/src/: analysis.rs  api_client.rs  comparison.rs  doc_quality.rs  gate_scorer.rs  gated_runner.rs  history.rs  lib.rs  mcp_adapter.rs  mcp_comparison.rs  mcp_planning_comparison.rs  mcp_suite.rs  metrics_collector.rs  prompt_builder.rs  reports.rs  runner.rs  scenario_pack.rs  scoring.rs  tool_comparison.rs  types.rs  workspace.rs
benchmarks/practical/tests/: integration_test.rs
crates/cadre-cli/: Cargo.toml
crates/cadre-cli/src/: main.rs
crates/cadre-mcp/: Cargo.toml
crates/cadre-mcp/src/: lib.rs  main.rs  protocol.rs  server.rs  system_prompt.rs  tools.rs
crates/cadre-mcp/src/tools/: all_tools.rs  analyze_project.rs  archive_document.rs  capture_quality_baseline.rs  check_architecture_conformance.rs  compare_quality_baselines.rs  create_cross_reference.rs  create_document.rs  create_insight_note.rs  edit_document.rs  evaluate_brownfield.rs  fetch_insight_notes.rs  get_applicable_rules.rs  helpers.rs  index_code.rs  initialize_project.rs  list_catalog_languages.rs  list_cross_references.rs  list_documents.rs  list_insight_notes.rs  list_protected_rules.rs  list_quality_records.rs  mod.rs  query_architecture_catalog.rs  query_relationships.rs  query_rules.rs  read_document.rs  read_reference_architecture.rs  reassign_parent.rs  score_insight_note.rs  search_documents.rs  trace_ancestry.rs  transition_phase.rs
crates/cadre-store/: Cargo.toml
crates/cadre-store/src/: code_index.rs  config.rs  error.rs  lib.rs  store.rs
crates/ultra-metis-mcp/: Cargo.toml
crates/ultra-metis-mcp/src/: protocol.rs  system_prompt.rs  tools.rs
crates/ultra-metis-store/: Cargo.toml
crates/ultra-metis-store/src/: code_index.rs  config.rs  error.rs  lib.rs  store.rs
super-metis/crates/super-metis-core/: Cargo.toml
super-metis/crates/super-metis-core/src/: lib.rs
super-metis/crates/super-metis-core/src/domain/bootstrap/: mod.rs  monorepo_detector.rs  repo_scanner.rs
super-metis/crates/super-metis-core/src/domain/catalog/: mod.rs
super-metis/crates/super-metis-core/src/domain/catalog/brownfield_evaluator/: evaluator.rs  pattern_matcher.rs
super-metis/crates/super-metis-core/src/domain/documents/: hierarchy.rs  metadata.rs  mod.rs  traits.rs  types.rs
super-metis/crates/super-metis-core/src/domain/documents/adr/: acceptance_criteria.md  content.md  frontmatter.yaml
super-metis/crates/super-metis-core/src/domain/documents/analysis_baseline/: content.md  mod.rs
super-metis/crates/super-metis-core/src/domain/documents/approval_record/: frontmatter.yaml  mod.rs
super-metis/crates/super-metis-core/src/domain/documents/constraint_record/: mod.rs  (+2 more)
super-metis/crates/super-metis-core/src/domain/governance/: escalation.rs  gates.rs
super-metis/crates/super-metis-core/src/domain/operations/: loops.rs  mod.rs  operation.rs  workflow.rs
super-metis/crates/super-metis-core/src/domain/quality/: comparison.rs  gate_engine.rs  parser.rs
super-metis/crates/super-metis-core/src/domain/remediation/: mod.rs
super-metis/crates/super-metis-core/src/domain/rules/: mod.rs  protection.rs  seeding.rs
super-metis/crates/super-metis-core/src/domain/templates/: mod.rs
super-metis/crates/super-metis-core/src/domain/transitions/: enforcer.rs  hooks.rs  mod.rs  registry.rs  traceability.rs
super-metis/crates/super-metis-core/tests/: quality_gates.rs
super-metis/crates/ultra-metis-cli/: Cargo.toml
super-metis/crates/ultra-metis-cli/src/: main.rs
(+919 files in other folders)
