[workspace]
members = [
    "crates/cadre-core",
    "crates/cadre-store",
    "crates/cadre-cli",
    "crates/cadre-mcp",
    "benchmarks/practical",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Cadre Contributors"]
keywords = ["mcp", "documentation", "engineering", "ai"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Shared dependencies used by multiple crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.0"
tokio-test = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
glob = "0.3"
