[workspace]
members = [
    "crates/cadre-core",
    "crates/cadre-store",
    "crates/cadre-cli",
    "crates/cadre-mcp",
    "benchmarks/practical",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Cadre Contributors"]
keywords = ["mcp", "documentation", "engineering", "ai"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Shared dependencies used by multiple crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.0"
tokio-test = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
glob = "0.3"

[workspace.lints.clippy]
# Enable pedantic and nursery as warnings
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# --- Lints we actively enforce ---
large_enum_variant = "warn"
wildcard_imports = "warn"

# --- Structural lints: fix in crate restructuring (SMET-I-0085 to I-0088) ---
too_many_lines = "allow"            # 45 violations — fix in crate restructuring
too_many_arguments = "allow"        # 16 violations — fix in crate restructuring
cognitive_complexity = "allow"      # 8 violations — fix in crate restructuring

# --- Permanent style allows ---
# Lints where both styles are acceptable; we chose one.
struct_excessive_bools = "allow"    # PERMANENT: domain types legitimately have boolean flag fields
missing_fields_in_debug = "allow"   # PERMANENT: manual Debug impls intentionally skip closure fields
future_not_send = "allow"           # PERMANENT: nursery; async fns with non-Send refs in benchmarks are fine
return_self_not_must_use = "allow"  # PERMANENT: builder-pattern types return Self without #[must_use]
float_cmp = "allow"                 # PERMANENT: assert_eq! on f64 in tests is fine; 32 hits

# --- High-volume deferred allows ---
# Lints to revisit in future cleanup passes.
must_use_candidate = "allow"        # 539 violations — too many constructors/builders; case-by-case ratio too low
missing_errors_doc = "allow"        # 343 violations — docs cleanup is separate effort
doc_markdown = "allow"              # 215 violations — backtick enforcement in docs
missing_const_for_fn = "allow"      # 214 violations — nursery; high false-positive rate on fns that allocate
format_push_string = "allow"        # 106 violations — push_str vs write! style preference
module_name_repetitions = "allow"   # 98 violations — common in domain types (e.g., DocType in doc module)
unused_async = "allow"              # 95 violations — nursery; async fns needed for trait conformance
option_if_let_else = "allow"        # 69 violations — nursery; often less readable than if-let
manual_let_else = "allow"           # 67 violations — not auto-fixable by cargo clippy --fix
map_unwrap_or = "allow"             # 62 violations — nursery; sometimes less readable
cast_precision_loss = "allow"       # 59 violations — safe casts in our context (f64 from usize counts)
cast_possible_truncation = "allow"  # 45 violations — needs case-by-case audit
similar_names = "allow"             # 33 violations — false positives on domain terms
match_same_arms = "allow"           # 26 violations — sometimes intentional for clarity
cast_possible_wrap = "allow"        # 18 violations — safe in our u32/i64 context
unused_self = "allow"               # 12 violations — methods that take &self for API consistency
cast_sign_loss = "allow"            # 11 violations — safe casts (lengths, counts)
needless_collect = "allow"          # 10 violations — nursery; sometimes needed for borrow checker
missing_panics_doc = "allow"        # 7 violations — docs cleanup is separate effort
regex_creation_in_loops = "allow"   # 6 violations — nursery; needs structural refactor to hoist regex
