[package]
name = "cadre-control-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
cadre-core = { path = "../../crates/cadre-core" }
cadre-store = { path = "../../crates/cadre-store" }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[lints]
workspace = true
