[package]
name = "cadre-machine-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
dirs = "6"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
