[package]
name = "cadre-machine-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cadre-machine-runner"
path = "src/main.rs"

[lib]
name = "cadre_machine_runner"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
dirs = "5"
uuid = { version = "1.0", features = ["v4", "serde"] }
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
