[package]
name = "cadre-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for Cadre document management"
license.workspace = true
authors.workspace = true

[[bin]]
name = "cadre-mcp"
path = "src/main.rs"

[dependencies]
cadre-core = { path = "../cadre-core" }
cadre-store = { path = "../cadre-store" }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
