[package]
name = "cadre-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for Cadre document management"
license.workspace = true
authors.workspace = true

[[bin]]
name = "cadre-mcp"
path = "src/main.rs"

[lib]
name = "cadre_mcp_server"
path = "src/lib.rs"

[dependencies]
cadre-core = { path = "../cadre-core" }
cadre-store = { path = "../cadre-store" }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rust-mcp-sdk = { version = "0.8.0", default-features = false, features = [
    "server",
    "macros",
    "hyper-server",
    "streamable-http",
    "stdio",
] }
async-trait = "0.1"
futures = "0.3"
schemars = "0.8"
chrono = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
