[package]
name = "ultra-metis-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for Ultra-Metis document management"
license.workspace = true
authors.workspace = true

[[bin]]
name = "ultra-metis-mcp"
path = "src/main.rs"

[dependencies]
ultra-metis-core = { path = "../ultra-metis-core" }
ultra-metis-store = { path = "../ultra-metis-store" }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
