[package]
name = "cadre-runner-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
open = "5"
cadre-machine-runner = { path = "../../machine-runner" }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-updater = "2"
