[package]
name = "ultra-metis-core"
version.workspace = true
edition.workspace = true
description = "Core library for Ultra-Metis: Repo-Native AI Engineering Orchestration"
license.workspace = true
authors.workspace = true

[features]
default = []
test-utils = ["tempfile"]

[dependencies]
# Shared dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Core-specific dependencies
dirs = "5.0"
serde_yaml = "0.9"
toml = "0.8"
diesel = { version = "2.0", features = ["sqlite", "chrono", "uuid", "serde_json", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true }
pulldown-cmark = "0.9"
gray_matter = "0.2"
tera = "1.19"
include_dir = "0.7"
walkdir = "2.0"
regex = "1.12.2"

# Optional test utilities
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "ultra_metis_core"
path = "src/lib.rs"
