[package]
name = "ultra-metis-cli"
version.workspace = true
edition.workspace = true
description = "CLI for Ultra-Metis document management"
license.workspace = true
authors.workspace = true

[[bin]]
name = "ultra-metis"
path = "src/main.rs"

[dependencies]
ultra-metis-store = { path = "../ultra-metis-store" }
clap = { version = "4.0", features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
